# Gnoridor

./: .gitignore  Gnoridor.files  PKGBUILD  README.md  configure.ac  meson.build
src/: Makefile.am  callback.c  callback.h  gnoridor-board.c  gnoridor-board.h  gnoridor-cell.c  gnoridor-cell.h  gnoridor-define.h  gnoridor-player.c  gnoridor-player.h  gnoridor-resources.c  main.c
src/resources/: gnoridor.gresource.xml
src/resources/ui/: action-popover.ui
test/: test_direction.c
